contact-abc/css/styles.css
body {
    background-color: #F2F6FA;
    font-family: "Noto Sans Bhaiksuki", sans-serif;
}

.container {
    padding: 0 1rem;
    display: flex;
    max-width: 320px;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    /* make sure that there isn't too much stuff here IF things start messing up.... */
}

/* typography */
h2 {
    font-size: 1.75rem;
    font-style: normal;
    font-weight: 700;
    line-height: 150%;
    border-bottom: 3px solid #CB4E0B;
    border-left: 5px solid #CB4E0B;
    margin-bottom: 1.5rem;
    padding-left: .25rem;
}

p {
    font-size: 1rem;
    font-style: normal;
    font-weight: 500;
    line-height: 150%;
    margin-bottom: 2rem;
}

legend {
    font-size: 1rem;
    font-style: normal;
    font-weight: 400;
    line-height: 150%;
    /* 1.5rem */
}

section {
    margin: 3rem 0;
}

form {
/* THIS IS THE BACKGROUND WHITE PART OF THE ENTIRE FORM+PADDING AROUND THE FORM CONTENT/BOXES */
    background-color: white;
    padding: 2rem 1rem;
    min-width: 15rem;
    align-items: center;
}

form fieldset {
    border: none;
    margin-bottom: 2.5rem;
}

form label:not(input[type="radio"] + label, input[type="checkbox"] + label) {
    /* THIS STYLES THE RADIO BUTTONS FOR AREA OF INTEREST */
    display: block;
    width: 100%;
    margin-bottom: .5rem;
    line-height: 1.5;
}

form input:not([type="radio"], [type="checkbox"], [type="submit"]),
select,
textarea {
    border: .0625rem solid #C1C4C8;
    border-radius: .5rem;
    height: 3.625rem;
    padding: .75rem 1rem;
    width: 100%;
    min-width: 15rem;
    margin-bottom: 2.5rem;
}

form input:not([type="radio"], [type="checkbox"], [type="submit"]) {
    box-shadow: inset 0 1px 2px rgba(60, 64, 67, .15);
}

form fieldset div {
    display: flex;
    flex-wrap: wrap;
    gap: 1rem;
}

form fieldset label {
    /* had to remove the nth of type as there's only one fieldset! silly brittany */
    padding: 1rem;
    border-radius: .5rem;
    border: 1px solid #C1C4C8;
    cursor: pointer;
    flex-grow: 1;
    flex-basis: calc((37rem - 100%) * 999);
    min-inline-size: min(100%, 10rem);
    max-inline-size: 100%;
    text-align: center;
    white-space: nowrap;
}

span {
    margin-right: 1rem;
}

form textarea {
    max-height: 16rem;
    min-height: 5rem;
    resize: vertical;
}

fieldset>div {
    margin-bottom: 1.125rem;
    /* CHANGE THIS??? */
}

/* figure out how to get "select area of interest" back to the left */

fieldset label:has(input[type="radio"]:checked) {
    background-color: #CB4E0B;
    color: white;
}

fieldset {
    border: none;
    padding: 0;
    margin-bottom: 2rem;
    /* Larisa had colour in the demo - do i need that? dbl check */
}

input[type="submit"] {
    background-color: #EA580C;
    border: none;
    border-radius: .5rem;
    color: white;
    cursor: pointer;
    margin: 1rem 0;
    padding: .75rem;
    box-shadow: 0px 2px 2px rgba(60, 64, 67, .3);
    width: 80%;
    transition: all 0.3s ease;
    /* display: flex;
    justify-content: center;
    align-items: center; */
    width: 100%;
}

input[type="submit"]:hover {
    background-color: #EA580C;
    letter-spacing: 2px;
    margin-left: 1rem;
    padding: 1.5rem;
}

/* MEDIA QUERIES */

@media (min-width: 740px) {
    .container {
        padding: 0 1rem;
        max-width: 740px;
        margin: 0 auto;
    }

    .inner-header-container {
        gap: 1rem;
        display: flex;
    }
    
    
}

